after main merged, found minor issue. also add safety checks